Fixed spacing and separator graphics in the nav. Close #43

--- a/static_files/scss/jj-sidemenu.scss
+++ b/static_files/scss/jj-sidemenu.scss
@@ -295,6 +295,15 @@
 			.tech.active a {
 				background-position : 0 -700px;
 			}
+
+			.jackjones {
+				margin-bottom: 60px;
+			}
+
+			.core.tab,
+			.jackjones.tab {
+				background-image: none;
+			}
 		}
 	}
 }
